# LBP

tfhe_aes_homomorphic/: CMakeLists.txt  main.cpp
tfhe_aes_homomorphic/include/: keys.hpp  lut_utils.hpp  mvb_lut.hpp  sbox.hpp  tree_lut.hpp
tfhe_aes_homomorphic/src/: keys.cpp  lut_utils.cpp  mvb_lut.cpp  sbox.cpp  tree_lut.cpp
